# TheQuantumPoint

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  rust.yml
assets/branding/: README.md
crates/compiler/: Cargo.toml
crates/compiler/src/: cache.rs  declarations.rs  error.rs  ir_map.rs  language_tests.rs  lib.rs  lower.rs  node_data.rs  safe_expr.rs  validate.rs  values.rs
crates/emit-bridge/: Cargo.toml
crates/emit-bridge/src/: lib.rs
crates/emit-rust/: Cargo.toml
crates/emit-rust/src/: actions.rs  decls.rs  lib.rs
crates/emit-view/: Cargo.toml
crates/emit-view/src/: lib.rs
crates/emit-wasm/: Cargo.toml
crates/emit-wasm/src/: lib.rs
crates/graph-model/: Cargo.toml
crates/graph-model/src/: data.rs  format.rs  layer.rs  lib.rs  node_catalog.rs  subgraph.rs
crates/ir/: Cargo.toml
crates/ir/src/: expr.rs  lib.rs  program.rs
crates/nocode-app/: Cargo.toml  build.rs
crates/nocode-app/src/: branding.rs  main.rs  theme.rs
crates/nocode-app/src/app/: content_browser.rs  graphs.rs  launcher.rs  mod.rs  pipeline_job.rs  project.rs  props.rs  state.rs  studio.rs  view_runtime.rs
crates/nocode-app/src/app/studio/: center.rs  mod.rs  new_graph_popup.rs  properties.rs  terminal.rs  toolbar.rs
crates/nocode-app/src/graph/: edges.rs  editor.rs  mod.rs  nodes.rs  picker.rs  selection.rs  types.rs  viewport.rs
crates/nocode-app/src/graph/editor/: canvas.rs  mod.rs
crates/nocode-cli/: Cargo.toml
crates/nocode-cli/src/: lib.rs  main.rs
crates/nocode-core/: Cargo.toml
crates/nocode-core/src/: compile_ctx.rs  graph_files.rs  lib.rs  pipeline.rs  project_tree.rs  projects.rs  sandbox.rs  target.rs
crates/nocode-core/src/pipeline/: artifacts.rs  build.rs  check.rs  compile.rs  mod.rs  summary.rs  tests.rs
crates/nocode-core/src/projects/: mod.rs  paths.rs  store.rs  tests.rs
crates/qp-domain/: Cargo.toml
crates/qp-domain/src/: action.rs  domain.rs  lib.rs  ports.rs
crates/qp-graph-store/: Cargo.toml
crates/qp-graph-store/src/: dirty.rs  lib.rs  store.rs
crates/qp-runtime/: Cargo.toml
crates/qp-runtime/src/: exec.rs  (+5 more)
crates/qp-view-runtime/: Cargo.toml
docs/: ARCHITECTURE.md  ROADMAP.md
examples/branch-rust/: quantum-point.qp
examples/hello-rust/: quantum-point.qp
(+9 files in other folders)
